--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "test": "node --enable-source-maps --loader tsm --no-warnings ./behaviors/runner.mjs"
   },
   "dependencies": {
     "@types/node": "18.11.9",
@@ -16,5 +17,11 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "typescript": "4.8.4"
+  },
+  "devDependencies": {
+    "esbehavior": "^3.0.1",
+    "playwright": "^1.27.1",
+    "tsm": "^2.2.2",
+    "vite": "^3.2.2"
   }
 }
