--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "test": "node --enable-source-maps --loader tsm --no-warnings ./behaviors/runner.mjs"
+    "test": "node --enable-source-maps --loader tsm --no-warnings ./behaviors/runner.mjs",
+    "test:debug": "DEBUG=true npm run test"
   },
   "dependencies": {
     "@types/node": "18.11.9",
